kubernetes/main/apps/network/external-services/truenas/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.2
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 80
    protocol: TCP
    appProtocol: http
