kubernetes/main/apps/network/external-services/truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      appProtocol: http
  clusterIP: None
