kubernetes/main/apps/network/external-services/truenas/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.zinn.ca/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app truenas
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - truenas.zinn.ca
  rules:
    - backendRefs:
        - name: *app
          namespace: network
          port: 80
